--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,27 +10,27 @@ services:
     command: python3 manage.py runserver 0.0.0.0:8000
     restart: unless-stopped
 
-  frontend:
-    build: ./frontend
-    volumes:
-      - ./frontend/static:/static
-    ports:
-      - "8181:8181"
+  # frontend:
+  #   build: ./frontend
+  #   volumes:
+  #     - ./frontend/static:/static
+  #   ports:
+  #     - "8181:8181"
   #   # command: python3 -m http.server 8181
   #   # expose:
   #   #   - '8181'
-  nginx:
-    image: nginx
-    restart: always
-    volumes:
-      - .:/app
-      - ./nginx.conf:/etc/nginx/conf.d/nginx.conf
-      # - ./frontend/static:/home
-      # - ./static/:/static
-    ports:
-      - "80:80"
-      - "443:443"
-    command: /bin/bash -c "envsubst < /etc/nginx/conf.d/nginx.conf > /etc/nginx/conf.d/default.conf && exec nginx -g 'daemon off;'"
-    links:
-        - django
-        - frontend
+  # nginx:
+  #   image: nginx
+  #   restart: always
+  #   volumes:
+  #     - .:/app
+  #     - ./nginx.conf:/etc/nginx/conf.d/nginx.conf
+  #     # - ./frontend/static:/home
+  #     # - ./static/:/static
+  #   ports:
+  #     - "80:8080"
+  #     - "443:443"
+  #   command: /bin/bash -c "envsubst < /etc/nginx/conf.d/nginx.conf > /etc/nginx/conf.d/default.conf && exec nginx -g 'daemon off;'"
+  #   links:
+  #       - django
+  #       - frontend
